# conductor

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  justfile  pyproject.toml
.github/actions/setup-env/: action.yml
.github/workflows/: ci.yml
src/conductor/: __init__.py  __main__.py  cli.py  config.py  dag.py  defaults.py  dispatch.py  gh_sync.py  health.py  models.py  phases.py  pool.py  runner.py  state_db.py
tests/: test_cli.py  test_config.py  test_dag.py  test_defaults.py  test_dispatch.py  test_gh_sync.py  test_health.py  test_models.py  test_phases.py  test_pool.py  test_state_db.py
tests/integration/: conftest.py  test_end_to_end.py
