[project]
name = "conductor"
version = "0.1.0"
description = "General-purpose agent orchestrator — warm tmux pool, file-based I/O, Pydantic contracts, SQLite state"
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.scripts]
conductor = "conductor.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.14",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/conductor"]

[tool.ruff]
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.coverage.run]
source = ["conductor"]

[tool.coverage.report]
show_missing = true
skip_empty = true
